# sprocket

./: .gitignore  .gitmodules  Cargo.toml  README.md  netlify.toml
.cargo/: config.toml
apps/async-playground/: Cargo.toml  README.md
apps/async-playground/.cargo/: config.toml
apps/async-playground/testsuite/: Cargo.toml
apps/async-playground/testsuite/tests/: test.rs
apps/hello-world/: Cargo.toml  README.md
apps/hello-world/src/: lib.rs
apps/rtic-world/: Cargo.toml  memory.x
apps/rtic-world/.cargo/: config.toml
apps/rtic-world/testsuite/: Cargo.toml
apps/rtic-world/testsuite/tests/: test.rs
book/: book.toml
book/src/: SUMMARY.md  sprocket-intro.md
book/src/bootloader/: intro.md
book/src/bsp/: intro.md
book/src/hardware/: intro.md
book/src/i2c/: intro.md
book/src/station/: intro.md
bsp/: Cargo.toml
bsp/src/: lib.rs
